package UMLProject

type UMLProject struct {
}
