package error

type DUError interface {
	Error() string
}
